kube/umami/umami-deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: umami
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: umami-nginx
  namespace: umami
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - ${UMAMI_SERVER_HOSTNAME}
      secretName: umami-tls
  rules:
    - host: ${UMAMI_SERVER_HOSTNAME}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: umami-service
                port:
                  number: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: umami-service
  namespace: umami
spec:
  ports:
    - port: 3000
      protocol: TCP
  selector:
    app: umami-svc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: umami-svc
  namespace: umami
spec:
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: umami-svc
  replicas: 1
  template:
    metadata:
      labels:
        app: umami-svc
    spec:
      containers:
      - name: umami-svc
        image: ghcr.io/umami-software/umami:3.1
        imagePullPolicy: Always
        livenessProbe:
          httpGet:
            path: /api/heartbeat
            port: 3000
          initialDelaySeconds: 120 # Increased initial delay to 120 seconds to give Umami more time in case of migration
          periodSeconds: 15
          timeoutSeconds: 5
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /api/heartbeat
            port: 3000
          initialDelaySeconds: 60
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 3
        ports:
          - containerPort: 3000
